# introduction-to-data-pipelines-and-apache-airflow

airflow/: docker-compose.yml  dog_api_pipeline.py
airflow/mnt/dags/: day_3_dag.py  everyday_dag.py  weather_dbt_dag.py
airflow/weather/: pyproject.toml
airflow/weather/weather/: profiles.yml
airflow/weather/weather/models/marts/: _model.yml  average_temperture_in_bangkok.sql
airflow/weather/weather/models/staging/: _models.yml
airflow/weather/weather/tests/: assert_temperature_not_greater_than_60.sql
