[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["Patipanlee <157189722+Patipanlee@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbt = "^1.0.0.36.9"
dbt-postgres = "^1.7.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
